<resources>
    <string name="app_name">VoiceTube</string>
    <string name="hw1_title">Retrofit</string>
    <string name="hw2_title">SharePreference</string>
    <string name="hw3_title">RxCountDownTimer</string>
    <string name="auto_play">自動播放</string>
    <string name="sync_subtitle">字幕同步</string>
    <string name="pause">查詢單字時暫停播放</string>
    <string name="recommend_video">推薦影片提醒</string>
    <string name="notify">學習通知</string>
    <string name="countdown_hint">請輸入時間</string>
    <string name="button_start_countdown">開始倒數</string>
    <string name="button_pause_countdown">停止倒數</string>
</resources>
